tools: update sparse to '2022-06-27' master
Signed-off-by: Georgios Kourachanis <geo.kourachanis@gmail.com>

--- a/tools/sparse/Makefile
+++ b/tools/sparse/Makefile
@@ -6,12 +6,14 @@ include $(TOPDIR)/rules.mk
 
 PKG_NAME:=sparse
 
-PKG_VERSION:=0.6.4
-PKG_HASH:=6ab28b4991bc6aedbd73550291360aa6ab3df41f59206a9bde9690208a6e387c
+PKG_VERSION:=0.6.4.r39.gce1a6720
+PKG_HASH:=fb6f48d2fe5736ab81d7ebcb4632e8ed3f7dc754fd301ddb6541e49268d09ce8
 PKG_RELEASE:=1
+PKG_SOURCE_VERSION:=ce1a6720f69e6233ec9abd4e9aae5945e05fda41
+HOST_BUILD_DIR:=$(BUILD_DIR_HOST)/$(PKG_NAME)-$(PKG_SOURCE_VERSION)
 
-PKG_SOURCE:=$(PKG_NAME)-$(PKG_VERSION).tar.xz
-PKG_SOURCE_URL:=@KERNEL/software/devel/sparse/dist/
+PKG_SOURCE:=$(PKG_NAME)-$(PKG_SOURCE_VERSION).tar.gz
+PKG_SOURCE_URL:=https://git.kernel.org/pub/scm/devel/sparse/sparse.git/snapshot/
 
 PKG_BUILD_PARALLEL:=1
 
