--- a/package/system/rpcd/Makefile
+++ b/package/system/rpcd/Makefile
@@ -51,6 +51,7 @@ define Package/rpcd/conffiles
 /etc/config/rpcd
 endef
 
+TARGET_CFLAGS += -Wno-error=implicit-function-declaration
 TARGET_LDFLAGS += -lcrypt
 
 define Package/rpcd/install
