--- a/package/Makefile
+++ b/package/Makefile
@@ -99,7 +99,7 @@ ifdef CONFIG_SIGNED_PACKAGES
 	@for d in $(PACKAGE_SUBDIRS); do ( \
 		[ -d $$d ] && \
 			cd $$d || continue; \
-		$(STAGING_DIR_HOST)/bin/usign -S -m Packages -s $(BUILD_KEY); \
+		$(USIGN) -S -m Packages -s $(BUILD_KEY); \
 	); done
 endif
 
