--- a/package/kernel/linux/Makefile
+++ b/package/kernel/linux/Makefile
@@ -11,10 +11,11 @@ include $(INCLUDE_DIR)/kernel.mk
 PKG_NAME:=kernel
 PKG_FLAGS:=hold
 
-PKG_BUILD_DIR:=$(KERNEL_BUILD_DIR)/packages
 SUBTARGETS = $(sort $(filter-out feeds,$(notdir $(wildcard $(TOPDIR)/target/linux/* $(TOPDIR)/target/linux/feeds/*))))
 SUBTARGET_MODULES = $(foreach t,$(SUBTARGETS),$(firstword $(wildcard $(TOPDIR)/target/linux/feeds/$(t)/modules.mk $(TOPDIR)/target/linux/$(t)/modules.mk)))
-SCAN_DEPS=modules/*.mk $(SUBTARGET_MODULES) $(TOPDIR)/include/netfilter.mk
+SCAN_DEPS = modules/*.mk $(SUBTARGET_MODULES) $(TOPDIR)/include/netfilter.mk
+PKG_BUILD_DIR:=$(KERNEL_BUILD_DIR)/packages
+PKG_BUILD_PARALLEL:=0
 
 PKG_LICENSE:=GPL-2.0
 PKG_LICENSE_FILES:=
@@ -26,7 +27,7 @@ export SHELL:=/bin/sh
 include $(INCLUDE_DIR)/package.mk
 
 ifeq ($(DUMP),)
-  STAMP_BUILT:=$(STAMP_BUILT)_$(shell $(SCRIPT_DIR)/kconfig.pl $(LINUX_DIR)/.config | $(MKHASH) md5)
+  STAMP_BUILT:=$(STAMP_BUILT)_$(call LINUX_DIR_KCONFIG_LIST_MD5)
   -include $(LINUX_DIR)/.config
 endif
 
@@ -38,6 +39,9 @@ define Build/Configure
 endef
 
 define Build/Compile
+endef
+
+define KernelPackage/hooks
 endef
 
 define KernelPackage/depends
