build: images: x86: make var persistent by default and grow partitions' sizes
Signed-off-by: Georgios Kourachanis <geo.kourachanis@gmail.com>

--- a/config/Config-images.in
+++ b/config/Config-images.in
@@ -303,11 +303,13 @@ menu "Target Images"
 		depends on USES_BOOT_PART
 		default 8 if TARGET_apm821xx_sata
 		default 64 if TARGET_bcm27xx
+		default 128 if TARGET_x86
 		default 16
 
 	config TARGET_ROOTFS_PARTSIZE
 		int "Root filesystem partition size (in MiB)"
 		depends on USES_ROOTFS_PART || TARGET_ROOTFS_EXT4FS
+		default 768 if TARGET_x86
 		default 104
 		help
 		  Select the root filesystem partition size.
@@ -322,6 +324,7 @@ menu "Target Images"
 
 	config TARGET_ROOTFS_PERSIST_VAR
 		bool "Make /var persistent"
+		default y if TARGET_x86
 		default n
 		help
 		  Do not symlink /var to /tmp, so that its content will persist
