--- a/toolchain/binutils/Makefile
+++ b/toolchain/binutils/Makefile
@@ -43,6 +43,14 @@ ifeq ($(PKG_VERSION),2.39)
   PKG_HASH:=645c25f563b8adc0a81dbd6a41cffbf4d37083a382e02d5d3df4f65c09516d00
 endif
 
+ifeq ($(PKG_VERSION),2.40)
+  PKG_SOURCE_PROTO:=git
+  PKG_SOURCE_URL=https://sourceware.org/git/binutils-gdb.git
+  PKG_SOURCE_DATE:=2023-01-06
+  PKG_SOURCE_VERSION:=dcd469925324f430e8cf656c7f63538dd7a01d08
+  PKG_MIRROR_HASH:=bfa214b151ce9f7f75bac9808372c59cfc04c00798f6315f0f0b507edacea50c
+endif
+
 HOST_BUILD_PARALLEL:=1
 
 PATCH_DIR:=./patches/$(PKG_VERSION)
